--- a/vignettes/Week9_Genetic_Populations/Week9_vignette.Rmd
+++ b/vignettes/Week9_Genetic_Populations/Week9_vignette.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Week 7: Spatial Linear Models"
-author: "Helene Wagner and Yessica Rico"
+title: "Week 9: Population Structure"
+author: "Sean Schoville"
 date: "`r Sys.Date()`"
 show_toc: true
 output:
@@ -9,7 +9,7 @@ output:
     fig_width: 4 
     fig_height: 3.5
 vignette: >
-  %\VignetteIndexEntry{Week 7: Spatial Linear Models}
+  %\VignetteIndexEntry{Week 9: Population Structure}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
