--- a/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
+++ b/vignettes/Week7_Spatial_Linear_Models/Week7_vignette.Rmd
@@ -26,10 +26,9 @@ This worked example shows:
 
 ### b) Data set
 
-Here we analyze population-level data of the wildflower *Dianthus carthusianorum* (common name: Carthusian pink) in 65 calcareous grassland patches in the Franconian Jura, Germany (Rico et al. 2013). 
+Here we analyze population-level data of the wildflower *Dianthus carthusianorum* (common name: Carthusian pink) in 65 calcareous grassland patches in the Franconian Jura, Germany (Rico et al. 2013): 
 
-NOTE: IMPORT DATA, ADD DESCRIPTION
-- **Dianthus**: Spatial point data frame with population-level data (patch characteristics, grazing regime, genetic diversity, 15 alternative connectivity indices Si), included in package 'LandGenCourse'. To load it, type: data(Dianthus)
+- **Dianthus**: Spatial point data frame with population-level data (patch characteristics, grazing regime, genetic diversity, 15 alternative connectivity indices Si), included in package 'LandGenCourse'. To load the data, type (without quotes): 'data(Dianthus)'. For a definition of the variables, type: '?Dianthus'.
 
 ### c) Required R libraries
 
@@ -44,14 +43,19 @@ require(LandGenCourse)
 #require(nlme)
 #require(lattice)
 #require(MuMIn)
-#require(spmoran)
 require(ggplot2)
-
 source(system.file("extdata", "panel.cor.r", 
                             package = "LandGenCourse"))
 ```
 
-## 2. Test regression residuals for spatial autocorrelation
+Package 'spmoran' not automatically installed with 'LandGenCourse':
+
+```{r message=FALSE, warning=TRUE}
+if(!require(spmoran)) install.packages("spmoran")
+#require(spmoran)
+```
+
+## 2. Explore data set
 
 We will model allelic richness 'A' as a function of the following predictors:
 
@@ -64,11 +68,23 @@ The connectivity indices Si were calculated for each focal patch i, integrating 
 ### a) Import data
 
 ```{r}
-load(paste0(here::here(), "/vignettes/Week7_Spatial_Linear_models/Dianthus.Rdata"))
-#data(Dianthus)
+data(Dianthus)
 ```
 
 Allelic richness 'A' was not calculate for populations with < 5 individuals. Here we extract only the patches with 'A' values, and the variables needed, and store them in a data frame 'Dianthus.df'.
+
+### b) Create a map
+
+Note: the coordinates 'x' and 'y' in Dianthus@coords are Gauss-Krueger projection GK4 as defined in Dianthus@proj4string. In addition, 'Longitude' and 'Latitude' are available as variables in Dianthus@data. This is useful for functions like 'qmplot' that expect latlon coordinates. 
+
+```{r}
+ggmap::qmplot(x =  Longitude, y = Latitude, data = Dianthus@data,
+              source = "google", maptype = "terrain", zoom = 12)
+```
+
+As you can see from the map, most sites lie on the steep slopes between an upper and a lower Jurassic plateau. A few sites, south of road "S12216", lie at the forest edge on the upper plateau, typically in areas where the soil is too shallow to allow crop farming. With in the study area, all known sites were sampled. Additional sites are expected to be found mainly in the valley system in the Southwest. 
+
+### c) Explore correlations
 
 When fitting linear models, it is always a good idea to look at the correlations first. 
 
@@ -105,7 +121,7 @@ Despite this relationship, connectivity models Si that only considered *Dianthus
 We can check this by calculating the correlation of allelelic richness 'A' with each of the 15 connectivity models 'Si' in the data set. 
 
 ```{r}
-round(matrix(cor(Dianthus@data$A, Dianthus@data[,18:32], 
+round(matrix(cor(Dianthus@data$A, Dianthus@data[,15:29], 
                  use="pairwise.complete.obs"), 5, 3, byrow=TRUE, 
            dimnames=list(c("Eu", "Shecte", "Sheint", "Shenu", "Forest"), 
                          c("pj", "Aj", "Nj"))),3)
@@ -114,7 +130,9 @@ round(matrix(cor(Dianthus@data$A, Dianthus@data[,18:32],
 - Correlations with 'A' are highest for the two 'IBR' models that assume seed dispersal over a limited number of patches along shepherding routes ('Shecte' and 'Sheint'. These two models include only continuously grazed, or both continuously and intermittently grazed patches, respectively. 
 - Correlations for models that take in to account population size ('Nj') are only slightly lower, whereas those that use patch size ('Aj') as a proxy for the size of the seed emigrant pool had lower correlations. 
 
-### b) Fit regression models
+## 3. Test regression residuals for spatial autocorrelation
+
+### a) Fit regression models
 
 Here we fit three multiple regression models to explain variation in allelic richness:
 
@@ -161,7 +179,7 @@ par(mfrow=c(1,1))
 
 Not really!
 
-### c) Test for spatial autocorrelation (Moran's I):
+### b) Test for spatial autocorrelation (Moran's I):
 
 Before we interpret the models, let's check whether the assumption of independent residuals is violated by spatial autocorrelation in the residuals. 
 
@@ -212,8 +230,6 @@ Next, let's test each model for autocorrelation in the residuals:
 
 ```{r}
 spdep::lm.morantest(mod.lm.IBD, listw.gab) 
-spdep::lm.morantest(mod.lm.IBR, listw.gab)          
-spdep::lm.morantest(mod.lm.PatchSize, listw.gab)       
 ```
 ```{r}
 spdep::lm.morantest(mod.lm.IBR, listw.gab)          
@@ -224,7 +240,7 @@ spdep::lm.morantest(mod.lm.PatchSize, listw.gab)
 
 Quite a bit of the spatial autocorrelation in allelic richness can be explained by the spatial structure in the predictors IBR and PatchSize. There is still statistically significant spatial autocorrelation in the residuals, though it is not strong any more. 
 
-## 3. Fit models with spatially correlated error (GLS) with package 'nlme'
+## 4. Fit models with spatially correlated error (GLS) with package 'nlme'
 
 One way to account for spatial autocorrelation in the residuals is to fit a Generalized Least Squares model (GLS) with a spatially autocorrelated error structure. 
 See also: http://rfunctions.blogspot.ca/2017/06/how-to-identify-and-remove-spatial.html
@@ -317,7 +333,7 @@ lattice::trellis.unfocus()
 The variogam does look better!
 
 
-## 4. Fit spatial simultaneous autoregressive error models (SAR) with package 'spdep'
+## 5. Fit spatial simultaneous autoregressive error models (SAR) with package 'spdep'
 
 An alternative way to account for spatial autocorrelation in the residuals is spatial regression with a simultaneous autoregressive error model (SAR).
 
@@ -347,7 +363,7 @@ summary(mod.sar.IBR.d1, Nagelkerke = TRUE)
 - Again, PatchSize is significant but not IBR. 
 - The section starting with 'Lamba' summarizes the fitted spatial autocorrelation term. It is not statistically significant (p-value = 0.1039 for the Likelihood Ratio test LR).
 
-## 5. Spatial filtering with MEM using package 'spmoran'
+## 6. Spatial filtering with MEM using package 'spmoran'
 
 See tutorial for 'spmoran' package: https://arxiv.org/ftp/arxiv/papers/1703/1703.04467.pdf
 
@@ -425,7 +441,7 @@ We get an additional output 'r_res$s' with two parameters:
 - **shrink_sf_SE**: when squared, this tells us how much variance was captured by the MEM eigenvectors.
 - **shrink_sf_alpha**: this give an indication of the spatial scale of the observed pattern. A value above 1 would indicate large-scale spatial structure. Here it seems to be a finer-scale pattern overall.
 
-## 6. Fit spatially varying coefficients models with package 'spmoran'
+## 7. Fit spatially varying coefficients model with package 'spmoran'
 
 See: https://arxiv.org/ftp/arxiv/papers/1703/1703.04467.pdf
 
@@ -491,7 +507,7 @@ ggplot(as.data.frame(Result), aes(x, y, col=p.IBR < 0.05, size=b.IBR)) +
 
 ### Model with IBR only
 
-Keep in mind that 'IBR' and 'PatchSize' showed a strong correlation. The parameter estimates could therefore depend quite a bit on the other variables. To help with the interpretation, let's repeat the last analysis just with 'IBD', without 'PatchSize'. 
+Keep in mind that 'IBR' and 'PatchSize' showed a strong correlation. The parameter estimates could therefore depend quite a bit on the other variables. To help with the interpretation, let's repeat the last analysis just with 'IBR', without 'PatchSize'. 
 
 ```{r}
 rv_res <- spmoran::resf_vc( y=Dianthus.df$A, 
@@ -522,14 +538,14 @@ This is a very different map of results!
 - There are 3 - 4 clusters of sites where the IBR models is not effective at explaining variation in allelic richness: in the very East, in the South-East, and one area in the South-West. 
 - Knowing the study area, these are distinct regions (e.g. valleys) that may suggest further biological explanations.
 
-### Conclusions
+## 8. Conclusions
 
 - We moved from pair-wise distance matrices (link-based) to node-based analysis by integrating the explanatory distance matrices for IBD and IBR into patch-level connectivity indices Si (neighborhood analysis). 
 - We found no support for the IBD model, and strong support for the IBR model when tested without additional predictors. 
 - The site-level predictors 'PatchSize' (log('Ha')) was strongly correlated with our IBR model, and when PatchSize was added to the model, 'IBR' was no long statistically significant and its slope estimate changed considerably.
 - The MEM analogue to spatially weighted regression showed very different patterns for 'IBR' depending on whether or not 'PatchSize' was included in the model. Withouth 'PatchSize', 'IBR' showed significant positive correlation with allelic richness across the study area, except for three sub-areas. 
 - In practical terms, this may suggest that the management strategy of maintaining plant functional connectivity through shepherding seems to be working for this species overall, though there are three parts of the study area where this may not be sufficient to maintain gene flow. 
-- The evidence is not conclusive, however, the observed patterns could also be explained by population size, which in this species seems to be associated with population size. This makes sense if smaller patches contain smaller populations with higher rates of genetic drift.
+- The evidence is not conclusive, however, the observed patterns could also be explained by population size, which in this species seems to be associated with patch size. This makes sense if smaller patches contain smaller populations with higher rates of genetic drift.
 
 ```{r message=FALSE, warning=TRUE, include=FALSE}
 LandGenCourse::detachAllPackages()
